# rrr-proxy

./: Cargo.toml  Dockerfile
.cargo/: config.toml
src/: lib.rs  main.rs  manager.rs  proxy.rs  signaling.rs
src/manager/: client.rs  endpoint.rs  load.rs  models.rs  pmetrics.rs  register.rs
src/proxy/: tcp_clients.rs  udp_client.rs
src/signaling/: client.rs  endpoint.rs  models.rs
tests/: integration_test.rs
