[package]
name = "rrr_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
axum = { version = "0.8.4"}
axum-macros = "0.5.0"
axum-test = "17.3.0"
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.4", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
once_cell = "1.21.3"
const_env = "0.1.2"
tungstenite = { version = "0.26.2", features = ["native-tls"] }
native-tls = "0.2.14"
futures = "0.3.31"
env_logger = "0.11.8"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log", "fmt"]}
tracing = "0.1.41"
log = "0.4.27"
tracing-test= "0.2.5"
