[package]
name = "rrr_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
axum = { version = "0.8.6"}
axum-macros = "0.5.0"
axum-test = "18.4.1"
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.6", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.145"
once_cell = "1.21.3"
const_env = "0.1.2"
tungstenite = { version = "0.28.0", features = ["native-tls"] }
native-tls = "0.2.14"
futures = "0.3.31"
env_logger = "0.11.8"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log", "fmt"]}
tracing = "0.1.41"
log = "0.4.27"
tracing-test = "0.2.5"
sysinfo = "0.37.2"
futures-channel = "0.3.31"
ws-mock = "0.4.0"
anyhow = "1.0.100"
http-body-util = "0.1.3"
uuid = {version = "1.1.19", features = ["v4"]}
metrics-exporter-prometheus = "0.18.1"
metrics = "0.24.3"
signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}
signal-hook = "0.3.18"
